# ai-agent-api

./: docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 18f80d8fa13b_initial_migration.py  2c8be4bf66e8_added_more_relationships_between_models.py  67414665c9b2_models_for_users_projects_tasks.py
scripts/: seed.py
src/app/: main.py
src/app/core/: config.py  db.py
src/app/models/: project.py  task.py  user.py
src/app/services/: project.py
