[project]
name = "ai-agent-api"
version = "0.1.0"
description = "Tasks ai-agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "redis>=4.3.4",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[project.optional-dependencies]
dev = [

]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["py.typed"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
